[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/roboto_bold_12.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/ui/tokens/SupportInstanceToken.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/roboto_bold_16.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/battle/ui/actions/SupportActionBar.gd" type="Script" id=4]
[ext_resource path="res://data/supports/Support1.tres" type="Resource" id=5]
[ext_resource path="res://data/supports/Support2.tres" type="Resource" id=6]
[ext_resource path="res://data/supports/Support3.tres" type="Resource" id=7]
[ext_resource path="res://data/supports/Support4.tres" type="Resource" id=8]
[ext_resource path="res://data/supports/Support5.tres" type="Resource" id=9]
[ext_resource path="res://data/supports/Support6.tres" type="Resource" id=10]

[node name="SupportActionBar" type="VBoxContainer"]
anchor_right = 1.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_vertical = 8
custom_constants/separation = 12
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoToggle" type="Button" parent="."]
margin_right = 360.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
toggle_mode = true
text = "+ Info"

[node name="Supports" type="HBoxContainer" parent="."]
margin_top = 33.0
margin_right = 360.0
margin_bottom = 100.0
alignment = 1

[node name="Support1" parent="Supports" instance=ExtResource( 2 )]
margin_left = 26.0
margin_right = 74.0
margin_bottom = 67.0
support_data = ExtResource( 5 )

[node name="Support2" parent="Supports" instance=ExtResource( 2 )]
margin_left = 78.0
margin_right = 126.0
margin_bottom = 67.0
support_data = ExtResource( 6 )

[node name="Support3" parent="Supports" instance=ExtResource( 2 )]
margin_left = 130.0
margin_right = 178.0
margin_bottom = 67.0
support_data = ExtResource( 7 )

[node name="Support4" parent="Supports" instance=ExtResource( 2 )]
margin_left = 182.0
margin_right = 230.0
margin_bottom = 67.0
support_data = ExtResource( 8 )

[node name="Support5" parent="Supports" instance=ExtResource( 2 )]
margin_left = 234.0
margin_right = 282.0
margin_bottom = 67.0
support_data = ExtResource( 9 )

[node name="Support6" parent="Supports" instance=ExtResource( 2 )]
margin_left = 286.0
margin_right = 334.0
margin_bottom = 67.0
support_data = ExtResource( 10 )

[node name="Actions" type="HBoxContainer" parent="."]
margin_top = 112.0
margin_right = 360.0
margin_bottom = 137.0
custom_constants/separation = 16
alignment = 1

[node name="Cancel" type="Button" parent="Actions"]
margin_left = 76.0
margin_right = 172.0
margin_bottom = 25.0
rect_min_size = Vector2( 96, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Cancel"

[node name="Use" type="Button" parent="Actions"]
margin_left = 188.0
margin_right = 284.0
margin_bottom = 25.0
rect_min_size = Vector2( 96, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Use"

[connection signal="toggled" from="InfoToggle" to="." method="_on_info_toggled"]
[connection signal="deselected" from="Supports/Support1" to="." method="_on_token1_deselected"]
[connection signal="selected" from="Supports/Support1" to="." method="_on_token1_selected"]
[connection signal="deselected" from="Supports/Support2" to="." method="_on_token2_deselected"]
[connection signal="selected" from="Supports/Support2" to="." method="_on_token2_selected"]
[connection signal="deselected" from="Supports/Support3" to="." method="_on_token3_deselected"]
[connection signal="selected" from="Supports/Support3" to="." method="_on_token3_selected"]
[connection signal="deselected" from="Supports/Support4" to="." method="_on_token4_deselected"]
[connection signal="selected" from="Supports/Support4" to="." method="_on_token4_selected"]
[connection signal="deselected" from="Supports/Support5" to="." method="_on_token5_deselected"]
[connection signal="selected" from="Supports/Support5" to="." method="_on_token5_selected"]
[connection signal="deselected" from="Supports/Support6" to="." method="_on_token6_deselected"]
[connection signal="selected" from="Supports/Support6" to="." method="_on_token6_selected"]
[connection signal="pressed" from="Actions/Cancel" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="Actions/Use" to="." method="_on_use_button_pressed"]
